# end-to-end-ocr-system

./: .gitignore  README.md  label_processor.pkl  main.py  preprocessing_data.pkl  pyproject.toml  requirements.txt  test.ipynb  test.py
Analyze_dataset/: analyze.py
api/: main.py  utils.py
notebooks/: 01_dataset_explore.ipynb
preprocessing/: image_preprocessing.py
training/: CRNN_model.py  Complete_CRNN_training.py  training.py
training-2/: main_execution.py
training_2/: main_execution.py
